lint: move some more rules to oxlint/oxfmt and upgrade linter versions

--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -6,9 +6,9 @@ on:
     branches:
       - master
     paths:
-      - "packages/docs/**"
-      - ".github/workflows/docs-spelling.yml"
-      - ".github/actions/docs-spelling/**"
+      - 'packages/docs/**'
+      - '.github/workflows/docs-spelling.yml'
+      - '.github/actions/docs-spelling/**'
   workflow_dispatch:
 
 jobs:
