--- a/.github/workflows/publish-nightly-electron.yml
+++ b/.github/workflows/publish-nightly-electron.yml
@@ -3,7 +3,7 @@ name: Publish nightly desktop app
 # Publish nightly version of desktop app - Runs every day at midnight
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 defaults:
