lint: format docs package

--- a/.oxfmtrc.json
+++ b/.oxfmtrc.json
@@ -3,8 +3,5 @@
   "singleQuote": true,
   "trailingComma": "all",
   "arrowParens": "avoid",
-  "printWidth": 80,
-  "ignorePatterns": [
-    "packages/docs/*" // TOOD: fixme; temporary
-  ]
+  "printWidth": 80
 }
