Enhance VRT comment posting in workflow by using environment variables for PR number and artifact URL

--- a/.github/workflows/e2e-vrt-comment.yml
+++ b/.github/workflows/e2e-vrt-comment.yml
@@ -54,11 +54,16 @@ jobs:
       - name: Comment on PR with VRT report link
         if: steps.metadata.outputs.should_comment == 'true'
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
+        env:
+          PR_NUMBER: ${{ steps.metadata.outputs.pr_number }}
+          ARTIFACT_URL: ${{ steps.metadata.outputs.artifact_url }}
         with:
           script: |
+            const prNumber = parseInt(process.env.PR_NUMBER, 10);
+            const artifactUrl = process.env.ARTIFACT_URL;
             await github.rest.issues.createComment({
-              issue_number: ${{ steps.metadata.outputs.pr_number }},
+              issue_number: prNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `VRT tests ❌ failed. [View the test report](${{ steps.metadata.outputs.artifact_url }}).\n\nTo update the VRT screenshots, comment \`/update-vrt\` on this PR.`
+              body: `VRT tests ❌ failed. [View the test report](${artifactUrl}).\n\nTo update the VRT screenshots, comment \`/update-vrt\` on this PR.`
             });
