--- a/.github/workflows/count-points.yml
+++ b/.github/workflows/count-points.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: Set up environment
         uses: ./.github/actions/setup
+        with:
+          download-translations: 'false'
       - name: Count points
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
