Improve Dev Container to isolate container node_modules from host

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,2 +1,21 @@
 FROM node:22-bookworm AS dev
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y openssl
+
+WORKDIR /workspaces
+
+# Copy only the files needed for installing dependencies
+COPY .yarn ./.yarn
+COPY yarn.lock package.json .yarnrc.yml tsconfig.json ./
+COPY packages/api/package.json packages/api/package.json
+COPY packages/component-library/package.json packages/component-library/package.json
+COPY packages/crdt/package.json packages/crdt/package.json
+COPY packages/desktop-client/package.json packages/desktop-client/package.json
+COPY packages/desktop-electron/package.json packages/desktop-electron/package.json
+COPY packages/eslint-plugin-actual/package.json packages/eslint-plugin-actual/package.json
+COPY packages/loot-core/package.json packages/loot-core/package.json
+COPY packages/sync-server/package.json packages/sync-server/package.json
+COPY packages/plugins-service/package.json packages/plugins-service/package.json
+
+COPY ./bin/package-browser ./bin/package-browser
+
+RUN yarn install
