--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,22 +4,23 @@ services:
   server:
     build:
       context: ..
-      dockerfile: .devcontainer/Dockerfile   # Dockerfile includes yarn dependencies
+      dockerfile: .devcontainer/Dockerfile   # Dockerfile already has yarn dependencies
     environment:
       NODE_ENV: development
-      ACTUAL_DATA_DIR: /data   # Persist data for the sync-server
+      ACTUAL_DATA_DIR: /data
       ACTUAL_PORT: 5006
     ports:
       - '${ACTUAL_PORT:-5006}:${ACTUAL_PORT:-5006}'
     volumes:
       - ..:/workspaces   # Mount host files within container
-      - sync_data:/data
+      - data:/data   # Persist data for the sync-server between sessions
       # Use the container version of the following directories
       - node_modules:/workspaces/node_modules
-      - node_modules2:/workspaces/packages/desktop-client/node_modules
-      - node_modules3:/workspaces/packages/sync-server/node_modules
-    networks:
-      - actual-net
+      - desktop_client_node_modules:/workspaces/packages/desktop-client/node_modules
+      - desktop_client_public:/workspaces/packages/desktop-client/public
+      - plugins_service_dist:/workspaces/packages/plugins-service/dist
+      - sync_server_node_modules:/workspaces/packages/sync-server/node_modules
+      - sync_server_build:/workspaces/packages/sync-server/build
     command: yarn start:server
     restart: unless-stopped
     healthcheck:
@@ -34,16 +35,17 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
-    networks:
-      - actual-net
     ports:
       - '3001:3001'
     volumes:
       - ..:/workspaces   # Mount host files within container
       # Use the container version of the following directories
       - node_modules:/workspaces/node_modules
-      - node_modules2:/workspaces/packages/desktop-client/node_modules
-      - node_modules3:/workspaces/packages/sync-server/node_modules
+      - desktop_client_node_modules:/workspaces/packages/desktop-client/node_modules
+      - desktop_client_public:/workspaces/packages/desktop-client/public
+      - plugins_service_dist:/workspaces/packages/plugins-service/dist
+      - sync_server_node_modules:/workspaces/packages/sync-server/node_modules
+      - sync_server_build:/workspaces/packages/sync-server/build
     environment:
       NODE_ENV: development
       BROWSER: none
@@ -53,16 +55,18 @@ services:
     command: yarn start:browser
     restart: 'no'
 
-networks:
-  actual-net:
-    driver: bridge
-
 volumes:
-  sync_data:
+  data:
     driver: local
   node_modules:
     driver: local
-  node_modules2:
+  desktop_client_node_modules:
     driver: local
-  node_modules3:
+  desktop_client_public:
+    driver: local
+  plugins_service_dist:
+    driver: local
+  sync_server_node_modules:
+    driver: local
+  sync_server_build:
     driver: local
