Isolate .yarn and loot-core/lib-dist in Dev Container from host

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,18 +8,22 @@ services:
       NODE_ENV: development
       ACTUAL_DATA_DIR: /data
       ACTUAL_PORT: 5006
+    networks:
+      - actual-net
     ports:
       - '${ACTUAL_PORT:-5006}:${ACTUAL_PORT:-5006}'
     volumes:
       - ..:/workspaces # Mount host files within container
       - server_data:/data # Persist data for the sync-server between sessions
       # Use the container version of the following directories
-      - server_cache_1:/workspaces/node_modules
-      - server_cache_2:/workspaces/packages/desktop-client/node_modules
-      - server_cache_3:/workspaces/packages/desktop-client/public
-      - server_cache_4:/workspaces/packages/plugins-service/dist
-      - server_cache_5:/workspaces/packages/sync-server/build
-      - server_cache_6:/workspaces/packages/sync-server/node_modules
+      - server_cache_1:/workspaces/.yarn
+      - server_cache_2:/workspaces/node_modules
+      - server_cache_3:/workspaces/packages/desktop-client/node_modules
+      - server_cache_4:/workspaces/packages/desktop-client/public
+      - server_cache_5:/workspaces/packages/loot-core/lib-dist
+      - server_cache_6:/workspaces/packages/plugins-service/dist
+      - server_cache_7:/workspaces/packages/sync-server/build
+      - server_cache_8:/workspaces/packages/sync-server/node_modules
     command: yarn start:server
     restart: unless-stopped
     healthcheck:
@@ -34,17 +38,21 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
+    networks:
+      - actual-net
     ports:
       - '3001:3001'
     volumes:
       - ..:/workspaces # Mount host files within container
       # Use the container version of the following directories
-      - browser_cache_1:/workspaces/node_modules
-      - browser_cache_2:/workspaces/packages/desktop-client/node_modules
-      - browser_cache_3:/workspaces/packages/desktop-client/public
-      - browser_cache_4:/workspaces/packages/plugins-service/dist
-      - browser_cache_5:/workspaces/packages/sync-server/build
-      - browser_cache_6:/workspaces/packages/sync-server/node_modules
+      - browser_cache_1:/workspaces/.yarn
+      - browser_cache_2:/workspaces/node_modules
+      - browser_cache_3:/workspaces/packages/desktop-client/node_modules
+      - browser_cache_4:/workspaces/packages/desktop-client/public
+      - browser_cache_5:/workspaces/packages/loot-core/lib-dist
+      - browser_cache_6:/workspaces/packages/plugins-service/dist
+      - browser_cache_7:/workspaces/packages/sync-server/build
+      - browser_cache_8:/workspaces/packages/sync-server/node_modules
     environment:
       NODE_ENV: development
       BROWSER: none
@@ -55,6 +63,10 @@ services:
     #     condition: service_healthy
     command: yarn start:browser
     restart: 'no'
+
+networks:
+  actual-net:
+    driver: bridge
 
 volumes:
   browser_cache_1:
@@ -68,6 +80,10 @@ volumes:
   browser_cache_5:
     driver: local
   browser_cache_6:
+    driver: local
+  browser_cache_7:
+    driver: local
+  browser_cache_8:
     driver: local
   server_data:
     driver: local
@@ -83,3 +99,10 @@ volumes:
     driver: local
   server_cache_6:
     driver: local
+  server_cache_7:
+    driver: local
+  server_cache_8:
+    driver: local
+
+  
+  
