--- a/.github/workflows/issues-close-feature-requests.yml
+++ b/.github/workflows/issues-close-feature-requests.yml
@@ -29,7 +29,7 @@ jobs:
 
             The enhancement backlog can be found here: https://github.com/actualbudget/actual/issues?q=label%3A%22needs+votes%22+sort%3Areactions-%2B1-desc+
 
-            Don’t forget to upvote the top comment with 👍!
+            Don't forget to upvote the top comment with 👍!
 
             <!-- feature-auto-close-comment -->
       - name: Close Issue
