--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,14 @@ export-2020-01-10.csv
 
 # JavaScript
 node_modules
+packages/api/app/bundle.api.js
 packages/api/app/stats.json
 packages/api/dist
 packages/api/@types
 packages/crdt/dist
 packages/desktop-client/build-stats
 packages/desktop-client/dev-dist
+packages/desktop-client/public/kcab
 packages/desktop-client/locale
 packages/desktop-client/playwright-report
 packages/desktop-client/test-results
