--- a/.github/workflows/i18n-string-extract-master.yml
+++ b/.github/workflows/i18n-string-extract-master.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   extract-and-upload-i18n-strings:
     runs-on: ubuntu-latest
-    if: github.repository == 'actualbudget/actual'
+    if: false # Temporarily disabled
     steps:
       - name: Check out main repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
