Add configuration files to make tests runnable in VS Code

--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -12,7 +12,7 @@
     "build:node": "tsc --p tsconfig.dist.json",
     "proto:generate": "./bin/generate-proto",
     "build": "rm -rf dist && yarn run build:node",
-    "test": "vitest --run --globals"
+    "test": "vitest --run"
   },
   "dependencies": {
     "google-protobuf": "^3.21.4",
