--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -15,6 +15,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy Docs
+    if: github.event.repository.fork == false
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
