--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -3,6 +3,7 @@ issue_enrichment:
     enabled: false
 reviews:
   review_status: false
+  high_level_summary: false
   finishing_touches:
     docstrings:
       enabled: false
