--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,14 +35,14 @@
       "@desktop-client/*": ["./packages/desktop-client/src/*"],
       "@desktop-client/e2e/*": ["./packages/desktop-client/e2e/*"],
       // Allow importing from hyperformula's internal typings for custom function plugins
-      "hyperformula/typings/*": ["./node_modules/hyperformula/typings/*"],
+      "hyperformula/typings/*": ["./node_modules/hyperformula/typings/*"]
     },
     "plugins": [
       {
         "name": "typescript-strict-plugin",
-        "path": ["./packages"],
-      },
-    ],
+        "path": ["./packages"]
+      }
+    ]
   },
   "include": ["packages/**/*", "bin/*.ts"],
   "exclude": [
@@ -55,11 +55,11 @@
     "**/lib-dist/*",
     "**/test-results/*",
     "**/playwright-report/*",
-    "**/service-worker/*",
+    "**/service-worker/*"
   ],
   "ts-node": {
     "compilerOptions": {
-      "module": "CommonJS",
-    },
-  },
+      "module": "CommonJS"
+    }
+  }
 }
