--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "bugs": {
     "url": "https://github.com/actualbudget/actual/issues/"
   },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git@github.com:actualbudget/actual.git"
   },
-  "license": "MIT",
   "workspaces": {
     "packages": [
       "packages/*"
@@ -75,8 +75,8 @@
     "minimatch": "^10.1.1",
     "node-jq": "^6.3.1",
     "npm-run-all": "^4.1.5",
-    "oxfmt": "^0.17.0",
-    "oxlint": "^1.32.0",
+    "oxfmt": "^0.22.0",
+    "oxlint": "^1.37.0",
     "p-limit": "^7.2.0",
     "prompts": "^2.4.2",
     "source-map-support": "^0.5.21",
@@ -88,10 +88,6 @@
     "rollup": "4.40.1",
     "socks": ">=2.8.3"
   },
-  "engines": {
-    "node": ">=22",
-    "yarn": "^4.9.1"
-  },
   "lint-staged": {
     "*.{js,mjs,jsx,ts,tsx,md,json,yml,yaml}": [
       "oxfmt --no-error-on-unmatched-pattern"
@@ -101,9 +97,13 @@
       "eslint --max-warnings 0 --fix --no-warn-ignored"
     ]
   },
-  "packageManager": "yarn@4.10.3",
   "browserslist": [
     "electron >= 35.0",
     "defaults"
-  ]
+  ],
+  "engines": {
+    "node": ">=22",
+    "yarn": "^4.9.1"
+  },
+  "packageManager": "yarn@4.10.3"
 }
