Add merge_group trigger to e2e-test workflow

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -12,6 +12,7 @@ on:
       - '!packages/ci-actions/**' # CI actions changes don't affect E2E tests
       - '!packages/docs/**' # Docs changes don't affect E2E tests
       - '!packages/eslint-plugin-actual/**' # Eslint plugin changes don't affect E2E tests
+  merge_group:
 
 env:
   GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
